# LuaCMake

./: CMakeLists.txt  LICENSE  LICENSE.md  README.md  lua-with-priv.pc.in  lua.pc.in
.github/workflows/: macos-lua-install.yaml  ubuntu-lua-install.yaml  windows-clang-cl-lua-install.yaml  windows-mingw-lua-install.yaml  windows-msys2-lua-install.yaml  windows-visual-studio-lua-install.yaml
cmake/: building_lua.cmake  lua.pc.in
